Here I do my second modification in the body

--- a/Clone1.html
+++ b/Clone1.html
@@ -7,6 +7,6 @@
     <title>CloningProject</title>
 </head>
 <body>
-    
+    <h1>This Path Help me tknow how cloning the project in the github</h1>
 </body>
 </html>
