Here I have Attend the end of my modification and thank you to all

--- a/Clone1.html
+++ b/Clone1.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>This Path Help me tknow how cloning the project in the github</h1>
+    <h2>And I have attend the of my cloning and thank to all</h2>
 </body>
 </html>
